Fixed the text color of the wishes property since it was not visible

--- a/src/styles/SharePage.css
+++ b/src/styles/SharePage.css
@@ -40,7 +40,8 @@
   align-items: center;
 }
 
-.wishes {
+.wishes_sharePage {
+  font-size: 1.2rem;
   width: 220px;
   margin-top: 20px;
   color: white;
